tests/error/array_to_slice_propagate_const.bz
// error: unable to match type '*int32' to '*const int32'
// note: mismatched const qualification of types 'int32' and 'const int32'
// note: while matching expression of type '[3: *int32]' to '[: *const int32]'
function main()
{
	let i = 0;
	let p_arr: [3: *int32] = [ &i, &i, &i ];
	let _slice: [: *const int32] = p_arr;
}
